# mod_grpc

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  gen.sh  proto.cmake
.github/workflows/: codeql-analysis.yml  development.yml  release.yml  workflow.yml
deploy/debian/: postinstall.sh
src/: Call.cpp  Call.h  CallManager.cpp  CallManager.h  Cluster.cpp  Cluster.h  ai_client.cpp  ai_client.h  amd_client.cpp  amd_client.h  grpc.conf.xml  mod_grpc.cpp  mod_grpc.h  push_client.cpp  push_client.h  utils.h  voice_bot_client.h
src/protos/: converse.proto  file.proto  fs.proto  push.proto  stream.proto  voice.proto  voicebot.proto
